--- a/Main.html
+++ b/Main.html
@@ -8,7 +8,7 @@
 <body>
 	<nav>
 		<div class="navlink">
-			<img src="jpg" alt="bild">
+			<img src="img/sharkslogo.png" alt="bild" width="80" height="80">
 		</div>
 		<div class="navlink">
 			<h2>sida 1</h4>
