la till två bilder o ändra namn på sida1

--- a/Main.html
+++ b/Main.html
@@ -3,15 +3,17 @@
 <head>
 	<title>Sharks</title>
 	<link rel="stylesheet" href="CSS/CSS.css" /> <!-- Länkar mitt css med min html. href är sökvägen till css filen och ut går ifrån den mapp detta dokument ligger i. -->
-	<meta charset="UTF-8" /><!-- teckenkodning UTF-8 har bl.a åäö -->
+		<meta charset="UTF-8" /><!-- teckenkodning UTF-8 har bl.a åäö -->
 </head>
 <body>
 	<nav>
+		<img src="img/navbild.png" alt="" class="navbild1">
+		<img src="img/navbild2.png" alt="" class="navbild2">
 		<div class="navlink">
 			<img src="img/sharkslogo.png" alt="bild" width="80" height="80">
 		</div>
 		<div class="navlink">
-			<h2>sida 1</h4>
+			<h2>Products</h4>
 		</div>
 		<div class="navlink">
 			<h2>sida 2</h4>
