la till 6 div på main o css

--- a/Main.html
+++ b/Main.html
@@ -25,5 +25,12 @@
 			<h2>sida 4</h4>
 		</div>
 	</nav>
+	<div class="ruta1"></div>
+	<div class="ruta2"></div>
+	<div class="ruta3"></div>
+	<div class="ruta4"></div>
+	<div class="ruta5"></div>
+	<div class="ruta6"></div>
+
 </body>
 </html>
