gjort en animation på products

--- a/products.html
+++ b/products.html
@@ -7,24 +7,25 @@
 </head>
 <body>
 	<nav>
-		<img src="img/navbild.png" alt="" class="navbild1">
-		<img src="img/navbild2.png" alt="" class="navbild2">
+		<img src="img/navbild.png" alt="" class="navbild3">
+		<img src="img/navbild2.png" alt="" class="navbild4">
 		<div class="navlink">
 			<a href="Main.html"><img src="img/sharkslogo.png" alt="bild" width="75" height="75"></a>
 		</div>
 		<a href="Products.html"><div class="navlink">
 			<h2>Products</h2>
 		</div></a>
-		<a href="About.html"><div class="navlink">
+		<div class="navlink">
 			<h2>About</h2>
-		</div></a>
-		<a href="Support.html"><div class="navlink">
+		</div>
+		<div class="navlink">
 			<h2>Support</h2>
-		</div></a>
-		<a href="Login.html"><div class="navlink">
+		</div>
+		<div class="navlink">
 			<h2>Login</h2>
-		</div></a>
+		</div>
 	</nav>
+	<div class="test"><h3>Category</h3></div>
 	<div class="ruta1"></div>
 	<div class="ruta2"></div>
 	<div class="ruta3"></div>
