--- a/Main.html
+++ b/Main.html
@@ -24,13 +24,31 @@
 		<a href="Login.html"><div class="navlink">
 			<h2>Login</h2>
 		</div></a>
+		<form id="searchbox" action="">
+    		<input id="search" type="text" placeholder="Type here">
+    		<input id="submit" type="submit" value="Search">
+		</form>
 	</nav>
-	<div class="ruta1"></div>
-	<div class="ruta2"></div>
-	<div class="ruta3"></div>
-	<div class="ruta4"></div>
-	<div class="ruta5"></div>
-	<div class="ruta6"></div>
-
+<div class="main">
+	<div class="ruta1">
+		
+	</div>
+	<div class="ruta1">
+		
+	</div>
+	<div class="ruta1">
+		
+	</div>
+	<div class="ruta1">
+		
+	</div>
+	<div class="ruta1">
+		
+	</div>
+	<div class="ruta1">
+	
+		
+	</div>
+	</div>
 </body>
 </html>
