--- a/products.html
+++ b/products.html
@@ -24,14 +24,37 @@
 		<div class="navlink">
 			<h2>Login</h2>
 		</div>
+		<form id="searchbox" action="">
+    		<input id="search" type="text" placeholder="Type here">
+    		<input id="submit" type="submit" value="Search">
+		</form>
 	</nav>
-	<div class="test"><h3>Category</h3></div>
-	<div class="ruta1"></div>
-	<div class="ruta2"></div>
-	<div class="ruta3"></div>
-	<div class="ruta4"></div>
-	<div class="ruta5"></div>
-	<div class="ruta6"></div>
 
+
+	
+	<div class="test">
+		<h3>Category</h3>
+	</div>
+<main>
+	<div class="ruta1">
+		
+	</div>
+	<div class="ruta1">
+		
+	</div>
+	<div class="ruta1">
+		
+	</div>
+	<div class="ruta1">
+		
+	</div>
+	<div class="ruta1">
+		
+	</div>
+	<div class="ruta1">
+	
+		
+	</div>
+	</main>
 </body>
 </html>
