--- a/products.html
+++ b/products.html
@@ -37,24 +37,32 @@
 	</div>
 <main>
 	<div class="ruta1">
-		
+		<img src="img/southpaw.jpg">
 	</div>
 	<div class="ruta1">
-		
+		<img src="img/ironman3.jpg">
 	</div>
 	<div class="ruta1">
-		
+		<img src="img/diehard4.0.jpg">
 	</div>
 	<div class="ruta1">
-		
+		<img src="img/captainamericacivilwar.jpg">
 	</div>
 	<div class="ruta1">
-		
+		<img src="img/ted2.jpg">
 	</div>
 	<div class="ruta1">
-	
-		
+		<img src="img/frozen.jpg">
 	</div>
-	</main>
+	<div class="ruta1">
+		<img src="img/interstellar.jpg">
+	</div>
+	<div class="ruta1">
+		<img src="img/avengers.jpg">
+	</div>
+	<div class="ruta1">
+		<img src="img/.jpg">
+	</div>
+</main>
 </body>
 </html>
