la till login och support hemsida

--- a/Main.html
+++ b/Main.html
@@ -18,10 +18,10 @@
 		<a href="About.html"><div class="navlink">
 			<h2>About</h2>
 		</div></a>
-		<a href="Support.html"><div class="navlink">
+		<a href="support.html"><div class="navlink">
 			<h2>Support</h2>
 		</div></a>
-		<a href="Login.html"><div class="navlink">
+		<a href="login.html"><div class="navlink">
 			<h2>Login</h2>
 		</div></a>
 		<form id="searchbox" action="">
