--- a/products.html
+++ b/products.html
@@ -18,12 +18,12 @@
 		<a href="about.html"><div class="navlink">
 			<h2>About</h2>
 		</div></a>
-		<div class="navlink">
+		<a href="support.html"><div class="navlink">
 			<h2>Support</h2>
-		</div>
-		<div class="navlink">
+		</div></a>
+		<a href="login.html"><div class="navlink">
 			<h2>Login</h2>
-		</div>
+		</div></a>
 		<form id="searchbox" action="">
     		<input id="search" type="text" placeholder="Type here">
     		<input id="submit" type="submit" value="Search">
