la till linkar till filmer

--- a/Main.html
+++ b/Main.html
@@ -179,19 +179,19 @@
         <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden;">
             <div data-p="112.50" style="display: none;">
                 <img data-u="image" src="img/01.jpg" />
-                <div data-u="thumb">Do you notice it is draggable by mouse/finger?</div>
+                <div data-u="thumb">Star Wars: The Force Awakens</div>
             </div>
             <div data-p="112.50" style="display: none;">
                 <img data-u="image" src="img/02.jpg" />
-                <div data-u="thumb">Did you drag by either horizontal or vertical?</div>
+                <div data-u="thumb">Hunger Games</div>
             </div>
             <div data-p="112.50" style="display: none;">
                 <img data-u="image" src="img/03.jpg" />
-                <div data-u="thumb">Do you notice navigator responses when drag?</div>
+                <div data-u="thumb">Avatar</div>
             </div>
             <div data-p="112.50" style="display: none;">
                 <img data-u="image" src="img/04.jpg" />
-                <div data-u="thumb">Do you notice arrow responses when click?</div>
+                <div data-u="thumb">Interstellar</div>
             </div>
         </div>
         <!-- Thumbnail Navigator -->
