--- a/products.html
+++ b/products.html
@@ -54,54 +54,53 @@ function restorePrice(n,price){
 
 </script>
 
-	<div class="ruta1" onmouseover="changePrice('1')" onmouseout="restorePrice('1','10')">
+	<a href="https://thepiratebay.se/search/southpaw/0/99/0"><div class="ruta1" onmouseover="changePrice('1')" onmouseout="restorePrice('1','10')">
 		<img src="img/southpaw.jpg">
 		<div class="filmp"> <p>price: 10€</p> </div>
 		<div class="overlay"> </div>
-	</div>
+	</div></a>
 
-	<div class="ruta1" onmouseover="changePrice('2')" onmouseout="restorePrice('2','12')">
+	<a href="https://thepiratebay.se/search/iron%20man%203/0/99/0"><div class="ruta1" onmouseover="changePrice('2')" onmouseout="restorePrice('2','12')">
 		<img src="img/ironman3.jpg">
 		<div class="filmp"> <p>price: 12€</p> </div>
 		<div class="overlay"> </div>
-	</div>
+	</div></a>
 
-	<div class="ruta1" onmouseover="changePrice('3')" onmouseout="restorePrice('3','12')">
+	<a href="https://thepiratebay.se/search/live%20free%20or%20die%20hard/0/99/0"><div class="ruta1" onmouseover="changePrice('3')" onmouseout="restorePrice('3','12')">
 		<img src="img/diehard4.0.jpg">
 		<div class="filmp"> <p>price: 10€</p> </div>
 		<div class="overlay"> </div>
-	</div>
+	</div></a>
 
-	<div class="ruta1" onmouseover="changePrice('4')" onmouseout="restorePrice('4','15')">
+	<a href="https://thepiratebay.se/search/captain%20america%20civil%20war/0/99/0"><div class="ruta1" onmouseover="changePrice('4')" onmouseout="restorePrice('4','15')">
 		<img src="img/captainamericacivilwar.jpg">
 		<div class="filmp"> <p>price: 15€</p> </div>
 		<div class="overlay"> </div>
-	</div>
+	</div></a>
 
-	<div class="ruta1" onmouseover="changePrice('5')" onmouseout="restorePrice('5','10')">
+	<a href="https://thepiratebay.se/search/ted/0/99/0"><div class="ruta1" onmouseover="changePrice('5')" onmouseout="restorePrice('5','10')">
 		<img src="img/ted2.jpg">
 		<div class="filmp"> <p>price: 10€</p> </div>
 		<div class="overlay"> </div>
-	</div>
+	</div></a>
 
-	<div class="ruta1" onmouseover="changePrice('6')" onmouseout="restorePrice('6','12')">
+	<a href="https://thepiratebay.se/search/frozen/0/99/0"></a><div class="ruta1" onmouseover="changePrice('6')" onmouseout="restorePrice('6','12')">
 		<img src="img/frozen.jpg">
 		<div class="filmp"> <p>price: 12€</p> </div>
 		<div class="overlay"> </div>
-	</div>
+	</div></a>
 
-	<div class="ruta1" onmouseover="changePrice('7')" onmouseout="restorePrice('7','10')">
+	<a href="https://thepiratebay.se/search/interstellar/0/99/0"><div class="ruta1" onmouseover="changePrice('7')" onmouseout="restorePrice('7','10')">
 		<img src="img/interstellar.jpg">
 		<div class="filmp"> <p>price: 10€</p> </div>
 		<div class="overlay"> </div>
-	</div>
+	</div></a>
 
-	<div class="ruta1" onmouseover="changePrice('8')" onmouseout="restorePrice('8','10')">
+	<a href="https://thepiratebay.se/search/avengers/0/99/0"><div class="ruta1" onmouseover="changePrice('8')" onmouseout="restorePrice('8','10')">
 		<img src="img/avengers.jpg">
 		<div class="filmp"> <p>price: 10€</p> </div>
 		<div class="overlay"> </div>
-
-	</div>
+	</div></a>
 
 	<div class="ruta1">
 		<img src="img/.jpg">
