--- a/login.html
+++ b/login.html
@@ -29,6 +29,18 @@
     		<input id="submit" type="submit" value="Search">
 		</form>
 	</nav>
+	<div class="login">
+		
+	<form action="demo_form.asp">
+	First name: <br>
+	<input type="text" name="FirstName" size="30"><br>
+	Last name: <br>
+	<input type="text" name="LastName" size="30"><br>
+	<input type="submit" value="Submit">
+	<input type="Submit" value="Sign up" size="5">
+	</form>
+
+	</div>
 
 </body>
 </html>
