--- a/products.html
+++ b/products.html
@@ -34,6 +34,7 @@
 	
 	<div class="test">
 		<h3>Category</h3>
+		<h3>Action</h3>
 	</div>
 <main>
 
@@ -54,7 +55,7 @@ function restorePrice(n,price){
 
 </script>
 
-	<a href="https://thepiratebay.se/search/southpaw/0/99/0"><div class="ruta1" onmouseover="changePrice('1')" onmouseout="restorePrice('1','10')">
+	<a href="southpaw.html"><div class="ruta1" onmouseover="changePrice('1')" onmouseout="restorePrice('1','10')">
 		<img src="img/southpaw.jpg">
 		<div class="filmp"> <p>price: 10€</p> </div>
 		<div class="overlay"> </div>
@@ -101,12 +102,12 @@ function restorePrice(n,price){
 		<div class="filmp"> <p>price: 10€</p> </div>
 		<div class="overlay"> </div>
 	</div></a>
-
+<!--
 	<div class="ruta1">
 		<img src="img/.jpg">
 		<div class="filmp"> <p>price: 10€</p> </div>
 	</div>
-
+-->
 </main>
 </body>
 </html>
