--- a/southpaw.html
+++ b/southpaw.html
@@ -29,19 +29,26 @@
     		<input id="submit" type="submit" value="Search">
 		</form>
 	</nav>
-	<div class="login">
-		
-	<form action="demo_form.asp">
-	First name: <br>
-	<input type="text" name="FirstName" size="30"><br>
-	Last name: <br>
-	<input type="text" name="LastName" size="30"><br>
-	<input type="submit" value="Submit">
-	<input type="Submit " value="Sign up" size="5">
-	</form>
+<div class="fact">
 
+	<div class="name"> <h1>Southpaw</h1> </div>
+
+
+	<div id="factWrapper">
+
+	<div class="ruta2">
+		<img src="img/southpaw.jpg">
 	</div>
 	
+	<div class="about">
+	Southpaw is a 2015 American sports drama film directed by Antoine Fuqua, written by Kurt Sutter, and starring Jake Gyllenhaal, Forest Whitaker, and Rachel McAdams. The film was released on July 24, 2015, by The Weinstein Company.
+	<br>
+	This was one of the last films to be scored by James Horner, before the composer's death, and one of three posthumous releases to feature his music. The film and the movie's soundtrack album are dedicated to his memory.
+	</div>
+
+	
+	</div>
+</div>
 
 </body>
 </html>
