ändra färgen på download button och shadowen på the button

--- a/login.html
+++ b/login.html
@@ -31,13 +31,11 @@
 	</nav>
 	<div class="login">
 		
-	<form action="demo_form.asp">
-	First name: <br>
-	<input type="text" name="FirstName" size="30"><br>
-	Last name: <br>
-	<input type="text" name="LastName" size="30"><br>
-	<input type="submit" value="Submit">
-	<input type="Submit " value="Sign up" size="5">
+		<form>
+		<input type="text" placeholder="Username" name="Username" size="30"/><br>
+		<input type="password" name="Password" value="" placeholder="Password" size="30"/><br>
+		<input type="button" value="Sign In"/>
+		<input type="button" value="Sign up"/>
 	</form>
 
 	</div>
