började med en footer

--- a/southpaw.html
+++ b/southpaw.html
@@ -32,7 +32,7 @@
 	</nav>
 <div class="fact">
 
-	<div class="name"> <h1>Southpaw</h1> </div>
+	<div class="name"> <h1>Southpaw - 2015</h1> </div>
 
 
 	<div id="factWrapper">
@@ -42,9 +42,7 @@
 	</div>
 	
 	<div class="about">
-	Southpaw is a 2015 American sports drama film directed by Antoine Fuqua, written by Kurt Sutter, and starring Jake Gyllenhaal, Forest Whitaker, and Rachel McAdams. The film was released on July 24, 2015, by The Weinstein Company.
-	<br>
-	This was one of the last films to be scored by James Horner, before the composer's death, and one of three posthumous releases to feature his music. The film and the movie's soundtrack album are dedicated to his memory.
+Southpaw Dreamfilm: Billy “The Great” Hope är regerande mästare i lätt tungvikt, och har med sin oortodoxa boxningsstil, gjort sig känd som en brutal och offensiv fighter. Sporrad av sin egen känsla av otillräcklighet och starka behov av kärlek, pengar och berömmelse har han kämpat sig till allt han drömt om. Men en dag inträffar en tragisk händelse som får Billys liv att rasa samman. Från att ha varit på topp, både i och utanför ringen, förlorar han allt och hans dagar blir en tjock dimma fylld av sorg, alkohol och droger. Billys nedåtspiral blir allt värre, tills den före detta boxaren Tick tar på sig att få honom på rätt köl igen. Billy tvingas nu möta sina demoner, och inse att ibland är man sin egen största motståndare. 
 	</div>
 	
 	</div>
@@ -52,6 +50,10 @@
 		<div class="download">
 		<h1>Download</h1>
 	</div></a>
+</div>
+
+<div class="footer">
+	
 </div>
 
 </body>
