la till bild i footer och ändra den i css. la in footer i alla sidor

--- a/Main.html
+++ b/Main.html
@@ -216,6 +216,8 @@
     </div>
 
     <!-- #endregion Jssor Slider End -->
-
+<div class="footer">
+	<img src="img/footer.png">
+</div>
 </body>
 </html>
