--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
 		<meta charset="UTF-8" /><!-- teckenkodning UTF-8 har bl.a åäö -->
 </head>
 <body>
+	<div class="wrapper">
 	<nav>
 		<img src="img/navbild.png" alt="" class="navbild1">
 		<img src="img/navbild2.png" alt="" class="navbild2">
@@ -39,7 +40,11 @@
 	</form>
 
 	</div>
-	
+<div class="cheat"></div>
+<div class="footer">
+	<img src="img/footer.png">
+</div>
+</div>
 
 </body>
 </html>
