--- a/products.html
+++ b/products.html
@@ -108,6 +108,11 @@ function restorePrice(n,price){
 		<div class="filmp"> <p>price: 10€</p> </div>
 	</div>
 -->
+
+
 </main>
+<div class="footer">
+	<img src="img/footer.png">
+</div>
 </body>
 </html>
