--- a/southpaw.html
+++ b/southpaw.html
@@ -53,7 +53,7 @@ Southpaw Dreamfilm: Billy “The Great” Hope är regerande mästare i lätt tu
 </div>
 
 <div class="footer">
-	
+	<img src="img/footer.png">
 </div>
 
 </body>
