--- a/support.html
+++ b/support.html
@@ -29,6 +29,9 @@
     		<input id="submit" type="submit" value="Search">
 		</form>
 	</nav>
-
+	<div class="cheat"></div>
+<div class="footer">
+	<img src="img/footer.png">
+</div>
 </body>
 </html>
