--- a/products.html
+++ b/products.html
@@ -33,8 +33,13 @@
 
 	
 	<div class="test">
-		<h3>Category</h3>
+		<h3>Genre:</h3>
+		<h3>Adventure</h3>
 		<h3>Action</h3>
+		<h3>Comedy</h3>
+		<h3>Drama</h3>
+		<h3>Horror</h3>
+		<h3>Romance</h3>
 	</div>
 <main>
 
@@ -61,13 +66,14 @@ function restorePrice(n,price){
 		<div class="overlay"> </div>
 	</div></a>
 
-	<a href="https://thepiratebay.se/search/iron%20man%203/0/99/0"><div class="ruta1" onmouseover="changePrice('2')" onmouseout="restorePrice('2','12')">
+	<a href="ironman3.html"><div class="ruta1" onmouseover="changePrice('2')" onmouseout="restorePrice('2','12')">
 		<img src="img/ironman3.jpg">
 		<div class="filmp"> <p>price: 12€</p> </div>
 		<div class="overlay"> </div>
 	</div></a>
 
-	<a href="https://thepiratebay.se/search/live%20free%20or%20die%20hard/0/99/0"><div class="ruta1" onmouseover="changePrice('3')" onmouseout="restorePrice('3','12')">
+	<a href="diehard.html">
+	<div class="ruta1" onmouseover="changePrice('3')" onmouseout="restorePrice('3','12')">
 		<img src="img/diehard4.0.jpg">
 		<div class="filmp"> <p>price: 10€</p> </div>
 		<div class="overlay"> </div>
